<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:title="@string/menu_main_title"
            android:icon="@drawable/icon_theme">
            <menu>
                <item
                    android:id="@+id/nav_grips"
                    android:icon="@drawable/icon_hand"
                    android:title="@string/nav_grips"/>
                <!--<item
                    android:id="@+id/nav_grip_settings"
                    android:icon="@drawable/icon_gear"
                    android:title="@string/nav_grip_settings"/>-->
                <item
                    android:id="@+id/nav_devices"
                    android:icon="@drawable/icon_bluetooth"
                    android:title="@string/nav_devices" />
            </menu>
        </item>

        <item
            android:title="@string/menu_list_options"
            android:icon="@drawable/icon_theme">
            <menu>
                <item
                    android:id="@+id/reset_grips"
                    android:title="@string/menu_reset_list"
                    android:icon="@drawable/icon_reset"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/save_list"
                    android:title="@string/menu_save_list"
                    android:icon="@drawable/icon_save"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/import_list"
                    android:title="@string/menu_import_list"
                    android:icon="@drawable/icon_import"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/delete_list"
                    android:title="@string/menu_delete_list"
                    android:icon="@drawable/icon_delete"
                    app:showAsAction="never"/>
            </menu>
        </item>

        <item
            android:title="@string/menu_themes_title"
            android:icon="@drawable/icon_theme" >
            <menu>
                <item
                    android:id="@+id/theme_switch"
                    android:title=""
                    app:actionLayout="@layout/nav_drawer_toggle"/>
            </menu>
        </item>

        <item
            android:title="@string/menu_support_title"
            android:icon="@drawable/icon_theme">
            <menu>
                <item
                    android:id="@+id/action_about_us"
                    android:title="@string/nav_about_us"
                    android:icon="@drawable/icon_about_us"
                    app:showAsAction="never"/>

                <item
                    android:id="@+id/action_privacy_policy"
                    android:title="@string/nav_privacy_policy"
                    android:icon="@drawable/icon_privacy_policy"
                    app:showAsAction="never"/>
            </menu>
        </item>
    </group>
</menu>