<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerview_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/grip_item_bg"
    android:orientation="horizontal"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/grip_status"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/grip_status"
            android:visibility="invisible" />


        <LinearLayout
            android:id="@+id/labels_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/item_grip_name"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/recycler_name_label"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorNavigationPressed"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/recycler_grip_description_label"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorNavigationPressed"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_grip_values"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/recycler_grip_value_label"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorNavigationPressed"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_grip_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_user_name_label"
                android:textAlignment="textStart"
                android:textColor="?attr/colorNavigationPressed"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_grip_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_user_grip_value_label"
                android:textColor="?attr/colorNavigationPressed"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recycler_user_grip_description_label"
                android:textColor="?attr/colorNavigationPressed"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>